--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "react-dom": "^18.2.0",
     "webext-base-css": "^1.4.3",
     "webextension-polyfill-ts": "^0.26.0",
-    "antd": "4.24.2"
+    "antd": "4.24.2",
+    "rxdb": "13.10.1",
+    "rxjs": "7.5.7",
+    "@babel/polyfill": "7.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
