rename folder from upper case to lower case, add visual studio code config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,14 +22,15 @@
 		"node/no-unsupported-features/es-syntax": "off",
 		"@typescript-eslint/comma-dangle": "off",
 		"@typescript-eslint/no-explicit-any": "warn",
+		"no-underscore-dangle": "off",
 		"@typescript-eslint/naming-convention": [
 			"error",
 			{
+				"selector": "variable",
+				"format": ["camelCase"],
 				"leadingUnderscore": "allow"
 			}
 		]
-		
-		
 	},
 	"env": {
 		"webextensions": true
