--- a/source/manifest.json
+++ b/source/manifest.json
@@ -14,10 +14,19 @@
   "short_name": "Smart Bookmarks",
 
   "permissions": [
-    "activeTab",
+    "<all_urls>",
+    "alarms",
+    "idle",
+    "bookmarks",
+    "history",
+    "contextMenus",
+    "tabs",
+    "webNavigation",
+    "notifications",
+    "unlimitedStorage",
     "storage",
-    "http://*/*",
-    "https://*/*"
+    "webRequest",
+    "webRequestBlocking"
   ],
 
   "content_security_policy": "script-src 'self'; object-src 'self'",
