--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,7 @@
 			"error",
 			{
 				"selector": "variable",
-				"format": ["camelCase"],
+				"format": ["camelCase", "PascalCase"],
 				"leadingUnderscore": "allow"
 			}
 		]
