--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "smart-bookmarks",
+  "name": "bookmark-intelligence",
+  "displayName": "Bookmark intelligence",
   "version": "0.1.0",
   "description": "Automate capture bookmark website screenshots, save bookmark website content, and easy-to-find bookmarks with powerful search engine",
   "private": true,
@@ -11,78 +12,57 @@
     "yarn": ">= 1.0.0"
   },
   "scripts": {
-    "dev:chrome": "cross-env NODE_ENV=development cross-env TARGET_BROWSER=chrome webpack --watch",
-    "dev:firefox": "cross-env NODE_ENV=development cross-env TARGET_BROWSER=firefox webpack --watch",
-    "dev:opera": "cross-env NODE_ENV=development cross-env TARGET_BROWSER=opera webpack --watch",
-    "build:chrome": "cross-env NODE_ENV=production cross-env TARGET_BROWSER=chrome webpack",
-    "build:firefox": "cross-env NODE_ENV=production cross-env TARGET_BROWSER=firefox webpack",
-    "build:opera": "cross-env NODE_ENV=production cross-env TARGET_BROWSER=opera webpack",
-    "build": "yarn run build:chrome && yarn run build:firefox && yarn run build:opera",
+    "dev": "plasmo dev",
+    "build": "plasmo build",
+    "package": "plasmo package",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
-    "@babel/runtime": "^7.20.1",
-    "advanced-css-reset": "^1.2.2",
-    "emoji-log": "^1.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "webext-base-css": "^1.4.3",
-    "webextension-polyfill-ts": "^0.26.0",
+    "plasmo": "0.58.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "antd": "5.0.0",
     "rxdb": "13.11.0",
     "rxjs": "7.5.7",
-    "@babel/polyfill": "7.12.1"
+    "webextension-polyfill-ts": "0.26.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.2",
-    "@babel/eslint-parser": "^7.19.1",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.20.2",
-    "@babel/plugin-transform-destructuring": "^7.20.2",
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@tsconfig/recommended": "^1.0.1",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
-    "@types/webpack": "^4.41.29",
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
-    "autoprefixer": "^10.2.5",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.4.1",
-    "cross-env": "^7.0.3",
-    "css-loader": "^5.2.5",
-    "eslint": "^8.27.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.10",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "filemanager-webpack-plugin": "^3.1.1",
-    "fork-ts-checker-webpack-plugin": "^6.2.10",
-    "html-webpack-plugin": "^4.5.2",
-    "mini-css-extract-plugin": "^1.6.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.6",
-    "postcss": "^8.3.0",
-    "postcss-loader": "^4.3.0",
-    "prettier": "^2.7.1",
-    "resolve-url-loader": "^3.1.3",
-    "sass": "^1.53.0",
-    "sass-loader": "^10.2.0",
-    "terser-webpack-plugin": "^4.2.3",
-    "typescript": "4.8.4",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^4.7.0",
-    "webpack-extension-reloader": "^1.1.4",
-    "wext-manifest-loader": "^2.3.0",
-    "wext-manifest-webpack-plugin": "^1.2.1"
+    "@types/chrome": "0.0.202",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
+    "prettier": "2.7.1",
+    "typescript": "4.9.3",
+    "@plasmohq/prettier-plugin-sort-imports": "3.5.4",
+    "eslint": "8.28.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0"
+  },
+  "manifest": {
+    "host_permissions": [
+      "<all_urls>"
+    ],
+    "permissions": [
+      "alarms",
+      "bookmarks",
+      "history",
+      "scripting",
+      "tabs",
+      "contextMenus",
+      "unlimitedStorage",
+      "webNavigation",
+      "notifications",
+      "storage"
+    ]
   }
 }
