--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,11 @@
 {
-	"extends": "@tsconfig/recommended/tsconfig.json",
-	"compilerOptions": {
-		"lib": [
-			"ES2019",
-			"ES2020",
-			"dom",
-			"dom.iterable",
-			"WebWorker",
-			"esnext.asynciterable"
-		],
-		"allowJs": true,
-		"jsx": "react", // JSX code generation
-		"removeComments": true, // Do not emit comments to output.
-		"declaration": false,
-		"isolatedModules": true,
-		/* Additional Checks */
-		"useDefineForClassFields": true
-	},
-	"include": [
-		"source",
-		"webpack.config.js"
-	],
-	"exclude": ["node_modules"]
+  "extends": "plasmo/templates/tsconfig.base",
+  "exclude": ["node_modules"],
+  "include": ["./**/*.ts", "./**/*.tsx"],
+  "compilerOptions": {
+    "paths": {
+      "~*": ["./src/*"]
+    },
+    "baseUrl": "."
+  }
 }
