--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,43 +1,37 @@
 {
-	"extends": [
-		"airbnb",
-		"airbnb-typescript",
-		"prettier"
-	],
-	"parserOptions": {
-		"project": [
-			"./tsconfig.json"
-		],
-		"sourceType": "module"
-	},
-	"rules": {
-		"no-console": "off",
-		"no-extend-native": "off",
-		"react/jsx-props-no-spreading": "off",
-		"jsx-a11y/label-has-associated-control": "off",
-		"class-methods-use-this": "off",
-		"max-classes-per-file": "off",
-		"node/no-missing-import": "off",
-		"node/no-unpublished-import": "off",
-		"node/no-unsupported-features/es-syntax": "off",
-		"@typescript-eslint/comma-dangle": "off",
-		"@typescript-eslint/no-explicit-any": "warn",
-		"no-underscore-dangle": "off",
-		"@typescript-eslint/naming-convention": [
-			"error",
-			{
-				"selector": "variable",
-				"format": ["camelCase", "PascalCase"],
-				"leadingUnderscore": "allow"
-			}
-		]
-	},
-	"env": {
-		"webextensions": true
-	},
-	"settings": {
-		"node": {
-			"tryExtensions": [".tsx"] // append tsx to the list as well
-		}
-	}
+  "extends": ["airbnb", "airbnb-typescript", "prettier"],
+  "parserOptions": {
+    "project": ["./tsconfig.json"],
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-console": "off",
+    "no-extend-native": "off",
+    "react/jsx-props-no-spreading": "off",
+    "jsx-a11y/label-has-associated-control": "off",
+    "class-methods-use-this": "off",
+    "max-classes-per-file": "off",
+    "node/no-missing-import": "off",
+    "node/no-unpublished-import": "off",
+    "node/no-unsupported-features/es-syntax": "off",
+    "@typescript-eslint/comma-dangle": "off",
+    "@typescript-eslint/no-explicit-any": "warn",
+    "no-underscore-dangle": "off",
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": "variable",
+        "format": ["camelCase", "PascalCase"],
+        "leadingUnderscore": "allow"
+      }
+    ]
+  },
+  "env": {
+    "webextensions": true
+  },
+  "settings": {
+    "node": {
+      "tryExtensions": [".tsx"] // append tsx to the list as well
+    }
+  }
 }
