--- a/package.json
+++ b/package.json
@@ -16,26 +16,30 @@
     "build": "plasmo build",
     "package": "plasmo package",
     "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix"
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write ."
   },
   "dependencies": {
     "plasmo": "0.58.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "antd": "5.0.0",
-    "rxdb": "13.11.0",
+    "antd": "5.0.3",
+    "rxdb": "13.13.5",
     "rxjs": "7.5.7",
-    "webextension-polyfill-ts": "0.26.0"
+    "webextension-polyfill-ts": "0.26.0",
+    "@reduxjs/toolkit": "1.9.1",
+    "react-redux": "8.0.5"
   },
   "devDependencies": {
-    "@types/chrome": "0.0.202",
+    "@types/chrome": "0.0.203",
     "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
+    "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "prettier": "2.7.1",
+    "prettier": "2.8.0",
     "typescript": "4.9.3",
-    "@plasmohq/prettier-plugin-sort-imports": "3.5.4",
-    "eslint": "8.28.0",
+    "@plasmohq/prettier-plugin-sort-imports": "3.6.0",
+    "eslint": "8.29.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-prettier": "8.5.0",
@@ -45,8 +49,13 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
-    "@typescript-eslint/eslint-plugin": "5.43.0",
-    "@typescript-eslint/parser": "5.43.0"
+    "@typescript-eslint/eslint-plugin": "5.45.0",
+    "@typescript-eslint/parser": "5.45.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "29.2.3",
+    "jest": "29.3.1"
   },
   "manifest": {
     "host_permissions": [
