--- a/package.json
+++ b/package.json
@@ -26,10 +26,15 @@
     "react-dom": "18.2.0",
     "antd": "5.0.3",
     "rxdb": "13.13.5",
-    "rxjs": "7.5.7",
+    "rxjs": "7.6.0",
     "webextension-polyfill-ts": "0.26.0",
     "@reduxjs/toolkit": "1.9.1",
-    "react-redux": "8.0.5"
+    "react-redux": "8.0.5",
+    "@plasmohq/redux-persist": "6.1.0",
+    "@plasmohq/storage": "0.13.0",
+    "redux": "4.2.0",
+    "redux-persist-webextension-storage": "1.0.2",
+    "redux-thunk": "2.4.2"
   },
   "devDependencies": {
     "@types/chrome": "0.0.203",
