--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@plasmohq/storage": "0.13.0",
     "redux": "4.2.0",
     "redux-persist-webextension-storage": "1.0.2",
-    "redux-thunk": "2.4.2"
+    "redux-thunk": "2.4.2",
+    "axios": "1.2.1"
   },
   "devDependencies": {
     "@types/chrome": "0.0.203",
@@ -63,6 +64,7 @@
     "jest": "29.3.1"
   },
   "manifest": {
+    "default_locale": "en",
     "host_permissions": [
       "<all_urls>"
     ],
@@ -74,6 +76,8 @@
       "tabs",
       "contextMenus",
       "unlimitedStorage",
+      "webRequest",
+      "declarativeNetRequest",
       "webNavigation",
       "notifications",
       "storage"
