--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "exclude": ["node_modules"],
   "include": ["./**/*.ts", "./**/*.tsx"],
   "compilerOptions": {
+    "jsx": "react",
     "paths": {
       "~*": ["./src/*"]
     },
