--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
       "error",
       {
         "selector": "variable",
-        "format": ["camelCase", "PascalCase"],
+        "format": ["camelCase", "PascalCase", "UPPER_CASE"],
         "leadingUnderscore": "allow"
       }
     ],
@@ -30,7 +30,7 @@
       "ignorePropertyModificationsFor": [
         "state"
       ]
-    }],
+    }]
   },
   "env": {
     "webextensions": true
