--- a/package.json
+++ b/package.json
@@ -21,31 +21,33 @@
     "format:fix": "prettier --write ."
   },
   "dependencies": {
-    "plasmo": "0.58.0",
+    "plasmo": "0.60.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "antd": "5.0.3",
-    "rxdb": "13.13.5",
-    "rxjs": "7.6.0",
+    "antd": "5.1.0",
+    "rxdb": "13.15.3",
+    "rxjs": "7.8.0",
     "webextension-polyfill-ts": "0.26.0",
     "@reduxjs/toolkit": "1.9.1",
     "react-redux": "8.0.5",
     "@plasmohq/redux-persist": "6.1.0",
-    "@plasmohq/storage": "0.13.0",
+    "@plasmohq/storage": "0.13.1",
+    "@plasmohq/messaging": "0.0.2",
     "redux": "4.2.0",
     "redux-persist-webextension-storage": "1.0.2",
     "redux-thunk": "2.4.2",
     "axios": "1.2.1"
   },
   "devDependencies": {
-    "@types/chrome": "0.0.203",
-    "@types/node": "18.11.9",
+    "@types/chrome": "0.0.206",
+    "@types/node": "18.11.17",
     "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "prettier": "2.8.0",
-    "typescript": "4.9.3",
-    "@plasmohq/prettier-plugin-sort-imports": "3.6.0",
-    "eslint": "8.29.0",
+    "@types/react-dom": "18.0.10",
+    "prettier": "2.8.1",
+    "typescript": "4.9.4",
+    "@plasmohq/prettier-plugin-sort-imports": "3.6.1",
+    "@plasmohq/rps": "1.8.1",
+    "eslint": "8.30.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-prettier": "8.5.0",
@@ -55,12 +57,12 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
-    "@typescript-eslint/eslint-plugin": "5.45.0",
-    "@typescript-eslint/parser": "5.45.0",
+    "@typescript-eslint/eslint-plugin": "5.47.0",
+    "@typescript-eslint/parser": "5.47.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "29.2.3",
+    "@types/jest": "29.2.4",
     "jest": "29.3.1"
   },
   "manifest": {
@@ -76,8 +78,6 @@
       "tabs",
       "contextMenus",
       "unlimitedStorage",
-      "webRequest",
-      "declarativeNetRequest",
       "webNavigation",
       "notifications",
       "storage"
