--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,9 @@
     "sourceType": "module"
   },
   "rules": {
+    "import/extensions": "off",
+    "import/prefer-default-export": "off",
+    "consistent-return": "off",
     "no-console": "off",
     "no-extend-native": "off",
     "react/jsx-props-no-spreading": "off",
