--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "antd": "5.1.0",
-    "rxdb": "13.15.3",
+    "@ant-design/icons": "4.8.0",
+    "rxdb": "13.16.0",
     "rxjs": "7.8.0",
     "webextension-polyfill-ts": "0.26.0",
     "@reduxjs/toolkit": "1.9.1",
@@ -36,13 +37,16 @@
     "redux": "4.2.0",
     "redux-persist-webextension-storage": "1.0.2",
     "redux-thunk": "2.4.2",
-    "axios": "1.2.1"
+    "axios": "1.2.1",
+    "uuid": "9.0.0",
+    "lodash": "4.17.21"
   },
   "devDependencies": {
     "@types/chrome": "0.0.206",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/lodash": "4.14.191",
     "prettier": "2.8.1",
     "typescript": "4.9.4",
     "@plasmohq/prettier-plugin-sort-imports": "3.6.1",
