--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "antd": "5.1.0",
+    "ahooks": "3.7.4",
     "@ant-design/icons": "4.8.0",
     "rxdb": "13.16.0",
     "rxjs": "7.8.0",
@@ -80,6 +81,7 @@
       "history",
       "scripting",
       "tabs",
+      "activeTab",
       "contextMenus",
       "unlimitedStorage",
       "webNavigation",
