--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "author": "help.bitskyai@gmail.com",
     "license": "GPL-3.0",
     "workspaces": [
-        "workspaces/*"
+        "projects/*"
     ],
     "engines": {
         "node": ">=16.0.0",
