--- a/package.json
+++ b/package.json
@@ -1,73 +1,79 @@
 {
-    "name": "bookmark-intelligence",
-    "displayName": "Bookmark intelligence",
-    "version": "0.1.0",
-    "description": "Automate capture bookmark website screenshots, save bookmark website content, and easy-to-find bookmarks with powerful search engine",
-    "private": true,
-    "repository": "https://github.com/bitskyai/smart-bookmarks.git",
-    "author": "help.bitskyai@gmail.com",
-    "license": "GPL-3.0",
-    "workspaces": [
-        "scripts",
-        "projects/*"
-    ],
-    "engines": {
-        "node": ">=16.0.0",
-        "yarn": ">= 1.0.0"
-    },
-    "scripts": {
-        "lint": "eslint . --ext .ts,.tsx",
-        "lint:fix": "eslint . --ext .ts,.tsx --fix",
-        "format": "prettier --check .",
-        "format:fix": "prettier --write .",
-        "setup": "zx ./scripts/setup.js"
-    },
-    "packageManager": "yarn@3.3.1",
-    "dependencies": {
-        "@babel/cli": "^7.17.10",
-        "@babel/core": "^7.18.2",
-        "@babel/node": "^7.17.10",
-        "@babel/plugin-proposal-class-properties": "^7.17.12",
-        "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
-        "@babel/plugin-transform-runtime": "^7.18.2",
-        "@babel/preset-env": "^7.18.2",
-        "@babel/preset-react": "^7.17.12",
-        "@babel/preset-typescript": "^7.17.12",
-        "@babel/register": "^7.17.7",
-        "@emotion/babel-plugin": "^11.9.2",
-        "@emotion/eslint-plugin": "^11.7.0",
-        "@emotion/react": "^11.9.0",
-        "@typescript-eslint/eslint-plugin": "^5.27.0",
-        "@typescript-eslint/parser": "^5.27.0",
-        "babel-jest": "^28.1.0",
-        "babel-plugin-import": "^1.13.5",
-        "babel-plugin-relay": "^13.2.0",
-        "chalk": "^5.0.1",
-        "cross-spawn": "^7.0.3",
-        "dotenv": "^16.0.1",
-        "envars": "^0.4.0",
-        "eslint": "^8.17.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-jsx-a11y": "^6.5.1",
-        "eslint-plugin-react": "^7.30.0",
-        "eslint-plugin-react-hooks": "^4.5.0",
-        "graphql-config": "^4.3.1",
-        "husky": "^8.0.1",
-        "inquirer": "^8.2.4",
-        "jest": "^28.1.0",
-        "minimist": "^1.2.6",
-        "prettier": "^2.6.2",
-        "react": "^18.1.0",
-        "typescript": "^4.7.3",
-        "zx": "^6.2.2"
-    },
-    "devDependencies": {
-        "@jest/types": "^28.1.0",
-        "@types/babel__core": "^7.1.19",
-        "@types/cross-spawn": "^6.0.2",
-        "@types/inquirer": "^8.2.1",
-        "@types/jest": "^28.1.0",
-        "@types/minimist": "^1.2.2",
-        "@types/node": "^17.0.39"
-    }
+  "name": "bookmark-intelligence",
+  "displayName": "Bookmark intelligence",
+  "version": "0.1.0",
+  "description": "Automate capture bookmark website screenshots, save bookmark website content, and easy-to-find bookmarks with powerful search engine",
+  "repository": "https://github.com/bitskyai/smart-bookmarks.git",
+  "author": "help.bitskyai@gmail.com",
+  "license": "GPL-3.0",
+  "private": true,
+  "type": "module",
+  "workspaces": [
+    "scripts",
+    "projects/*"
+  ],
+  "engines": {
+    "node": ">=16.0.0",
+    "yarn": ">= 1.0.0"
+  },
+  "scripts": {
+    "start": "yarn workspaces foreach run start",
+    "build": "yarn workspaces foreach -p -j unlimited run build",
+    "lint": "eslint --cache --report-unused-disable-directives .",
+    "test": "jest",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "setup": "zx ./scripts/setup.js"
+  },
+  "dependencies": {
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.2",
+    "@babel/node": "^7.17.10",
+    "@babel/plugin-proposal-class-properties": "^7.17.12",
+    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
+    "@babel/plugin-transform-runtime": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@babel/preset-typescript": "^7.17.12",
+    "@babel/register": "^7.17.7",
+    "@emotion/babel-plugin": "^11.9.2",
+    "@emotion/eslint-plugin": "^11.7.0",
+    "@emotion/react": "^11.9.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "babel-jest": "^28.1.0",
+    "babel-plugin-import": "^1.13.5",
+    "babel-plugin-relay": "^13.2.0",
+    "chalk": "^5.0.1",
+    "cross-spawn": "^7.0.3",
+    "dotenv": "^16.0.1",
+    "envars": "^0.4.0",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "graphql-config": "^4.3.1",
+    "husky": "^8.0.1",
+    "inquirer": "^8.2.4",
+    "jest": "^28.1.0",
+    "minimist": "^1.2.6",
+    "prettier": "^2.6.2",
+    "react": "^18.1.0",
+    "typescript": "^4.7.3",
+    "zx": "^7.1.1"
+  },
+  "devDependencies": {
+    "@jest/types": "^28.1.0",
+    "@types/babel__core": "^7.1.19",
+    "@types/cross-spawn": "^6.0.2",
+    "@types/inquirer": "^8.2.1",
+    "@types/jest": "^28.1.0",
+    "@types/minimist": "^1.2.2",
+    "@types/node": "^17.0.39"
+  },
+  "envars": {
+    "cwd": "./env"
+  }
 }
