add a templagte of ui and api

--- a/env/.local.env
+++ b/env/.local.env
@@ -8,23 +8,6 @@
 #       into ".local.override.env" file (excluded from the repo).
 
 APP_NAME=bookmark-intelligence
-APP_ORIGIN=http://localhost:3000
-API_ORIGIN=http://localhost:8080
-VERSION=latest
-
-# Google Cloud
-# https://console.cloud.google.com/
-GOOGLE_CLOUD_PROJECT=example-test
-GOOGLE_CLOUD_REGION=us-central1
-GOOGLE_CLOUD_ZONE=us-central1-f
-GOOGLE_CLOUD_SQL_INSTANCE=example-test:us-central1:pg14
-GOOGLE_APPLICATION_CREDENTIALS=../env/gcp-key.local.json
-
-# Google OAuth 2.0 credentials
-# https://console.cloud.google.com/apis/credentials
-GOOGLE_CLIENT_ID=xxxxx.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=xxxxx
-
-# Google Analytics (v4)
-# https://developers.google.com/analytics/devguides/collection/ga4
-GA_MEASUREMENT_ID=G-XXXXXXXX
+API_PORT=4000
+VERSION=1.0.0
+DATABASE_URL="postgresql://localhost:5432/postgres?schema=public"
