--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
 
 # Compiled output
-/*/dist/
+/**/dist/
 
 
 # Logs
