--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -1,112 +1,34 @@
 {
-    "name": "bi-api",
-    "version": "0.1.0",
-    "description": "api",
-    "type": "module",
-    "exports": "./index.js",
-    "main": "index.js",
-    "private": true,
-    "author": "",
-    "license": "ISC",
-    "scripts": {
-        "start": "rollup -c --watch",
-        "build": "rollup -c",
-        "update-schema": "cross-env BABEL_DISABLE_CACHE=1 babel-node ../scripts/update-schema",
-        "deploy": "yarn api:deploy",
-        "api:tsc": "tsc",
-        "api:start": "yarn workspace api run start",
-        "api:update-schema": "yarn workspace api run update-schema",
-        "api:build": "yarn workspace api run build",
-        "g:depcheck": "yarn depcheck \"$INIT_CWD\""
-    },
-    "dependencies": {
-        "envalid": "^7.3.1",
-        "express": "^4.18.1",
-        "express-handlebars": "^6.0.6",
-        "graphql": "^16.5.0",
-        "graphql-helix": "^1.12.0",
-        "graphql-relay": "^0.10.0",
-        "handlebars": "^4.7.7",
-        "http-errors": "^2.0.0",
-        "image-size": "^1.0.1",
-        "jose": "^4.8.1",
-        "knex": "^2.1.0",
-        "lodash": "^4.17.21",
-        "minimist": "^1.2.6",
-        "nanoid": "^3.3.4",
-        "pg": "^8.7.3",
-        "pretty-error": "^4.0.0",
-        "simple-oauth2": "^4.3.0",
-        "slugify": "^1.6.5",
-        "source-map-support": "^0.5.21",
-        "validator": "^13.7.0",
-        "validator-fluent": "^0.4.2"
-    },
-    "devDependencies": {
-        "@babel/cli": "^7.17.10",
-        "@babel/core": "^7.18.2",
-        "@babel/node": "^7.17.10",
-        "@babel/plugin-proposal-class-properties": "^7.17.12",
-        "@babel/preset-env": "^7.18.2",
-        "@babel/preset-typescript": "^7.17.12",
-        "@babel/register": "^7.17.7",
-        "@jest/types": "^28.1.0",
-        "@rollup/plugin-babel": "^5.3.1",
-        "@rollup/plugin-commonjs": "^22.0.0",
-        "@rollup/plugin-json": "^4.1.0",
-        "@rollup/plugin-node-resolve": "^13.3.0",
-        "@rollup/plugin-replace": "^4.0.0",
-        "@rollup/plugin-run": "^2.1.0",
-        "@rollup/plugin-url": "^7.0.0",
-        "@types/babel__core": "^7.1.19",
-        "@types/cookie": "^0.5.1",
-        "@types/cross-spawn": "^6.0.2",
-        "@types/express": "^4.17.13",
-        "@types/express-handlebars": "^6.0.0",
-        "@types/gm": "^1.18.12",
-        "@types/http-errors": "^1.8.2",
-        "@types/jest": "^28.1.0",
-        "@types/lodash": "^4.14.182",
-        "@types/minimist": "^1.2.2",
-        "@types/node": "^17.0.39",
-        "@types/pg": "^8.6.5",
-        "@types/simple-oauth2": "^4.1.1",
-        "@types/supertest": "^2.0.12",
-        "@types/validator": "^13.7.2",
-        "cross-env": "^7.0.3",
-        "cross-spawn": "^7.0.3",
-        "depcheck": "1.4.3",
-        "envars": "^0.4.0",
-        "knex-types": "^0.4.0",
-        "prettier": "^2.6.2",
-        "rollup": "^2.75.5",
-        "rollup-plugin-copy": "^3.4.0",
-        "rollup-plugin-delete": "^2.0.0",
-        "supertest": "^6.2.3",
-        "typescript": "^4.7.3"
-    },
-    "envars": {
-        "cwd": "../../env"
-    },
-    "babel": {
-        "presets": [
-            [
-                "@babel/preset-env",
-                {
-                    "targets": {
-                        "node": 16
-                    }
-                }
-            ],
-            [
-                "@babel/preset-typescript",
-                {
-                    "allowDeclareFields": true
-                }
-            ]
-        ],
-        "plugins": [
-            "@babel/plugin-proposal-class-properties"
-        ]
-    }
+  "name": "graphql-server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "ts-node-dev src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm i && npx prisma generate",
+    "seed": "prisma db seed",
+    "migration:latest": "prisma migrate dev"
+  },
+  "prisma": {
+    "seed": "ts-node-dev prisma/seed.ts"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^18.11.19",
+    "prisma": "^4.9.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@pothos/core": "^3.24.1",
+    "@pothos/plugin-prisma": "^3.40.2",
+    "@prisma/client": "^4.9.0",
+    "graphql": "^16.6.0",
+    "graphql-scalars": "^1.20.1",
+    "graphql-yoga": "^3.5.1",
+    "envalid": "^7.3.1"
+  }
 }
