--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "projects/*"
   ],
   "engines": {
-    "node": ">=16.0.0",
+    "node": "=16.17.1",
     "yarn": ">= 1.0.0"
   },
   "scripts": {
