--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -1,9 +1,37 @@
 {
-  "name": "bi-desktop-app",
-  "version": "0.1.0",
-  "description": "Desktop Application",
-  "main": "index.js",
-  "private": true,
-  "author": "",
-  "license": "ISC"
+    "name": "desktop-app",
+    "productName": "desktop-app",
+    "version": "1.0.0",
+    "private": true,
+    "description": "My Electron application description",
+    "main": ".webpack/main",
+    "scripts": {
+        "start": "electron-forge start",
+        "package": "electron-forge package",
+        "make": "electron-forge make",
+        "publish": "electron-forge publish",
+        "lint": "echo \"No linting configured\""
+    },
+    "keywords": [],
+    "author": {
+        "name": "neo",
+        "email": "shaokexu@example.com"
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "@electron-forge/cli": "^6.0.4",
+        "@electron-forge/maker-deb": "^6.0.4",
+        "@electron-forge/maker-rpm": "^6.0.4",
+        "@electron-forge/maker-squirrel": "^6.0.4",
+        "@electron-forge/maker-zip": "^6.0.4",
+        "@electron-forge/plugin-webpack": "^6.0.4",
+        "@vercel/webpack-asset-relocator-loader": "1.7.3",
+        "css-loader": "^6.0.0",
+        "electron": "22.2.0",
+        "node-loader": "^2.0.0",
+        "style-loader": "^3.0.0"
+    },
+    "dependencies": {
+        "electron-squirrel-startup": "^1.0.0"
+    }
 }
