--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "@types/inquirer": "^8.2.1",
     "@types/jest": "^28.1.0",
     "@types/minimist": "^1.2.2",
-    "@types/node": "^17.0.39"
+    "@types/node": "^17.0.39",
+    "syncpack": "^8.4.11"
   },
   "envars": {
     "cwd": "./env"
