--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -6,11 +6,11 @@
     "description": "My Electron application description",
     "main": ".webpack/main",
     "scripts": {
-        "start": "electron-forge start",
+        "dev": "electron-forge start",
         "package": "electron-forge package",
         "make": "electron-forge make",
         "publish": "electron-forge publish",
-        "lint": "echo \"No linting configured\""
+        "lint": "eslint --ext .ts,.tsx ."
     },
     "keywords": [],
     "author": {
@@ -25,11 +25,19 @@
         "@electron-forge/maker-squirrel": "^6.0.4",
         "@electron-forge/maker-zip": "^6.0.4",
         "@electron-forge/plugin-webpack": "^6.0.4",
+        "@typescript-eslint/eslint-plugin": "^5.0.0",
+        "@typescript-eslint/parser": "^5.0.0",
         "@vercel/webpack-asset-relocator-loader": "1.7.3",
         "css-loader": "^6.0.0",
         "electron": "22.2.0",
+        "eslint": "^8.0.1",
+        "eslint-plugin-import": "^2.25.0",
+        "fork-ts-checker-webpack-plugin": "^7.2.13",
         "node-loader": "^2.0.0",
-        "style-loader": "^3.0.0"
+        "style-loader": "^3.0.0",
+        "ts-loader": "^9.2.2",
+        "ts-node": "^10.0.0",
+        "typescript": "~4.5.4"
     },
     "dependencies": {
         "electron-squirrel-startup": "^1.0.0"
