sync up versions cross projects '

--- a/projects/browser-extension/package.json
+++ b/projects/browser-extension/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bookmark-intelligence",
   "displayName": "Bookmark Intelligence",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Automate capture bookmark website screenshots, save bookmark website content, and easy-to-find bookmarks with powerful search engine",
   "author": "help.bitskyai@gmail.com",
   "license": "GPL-3.0",
@@ -12,16 +12,16 @@
   },
   "dependencies": {
     "plasmo": "0.64.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/chrome": "0.0.210",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
+    "@types/node": "^18.11.19",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "prettier": "2.8.3",
-    "typescript": "4.9.4",
+    "typescript": "^4.9.5",
     "@plasmohq/prettier-plugin-sort-imports": "3.6.1"
   },
   "manifest": {
