--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "yarn": ">= 1.0.0"
   },
   "scripts": {
-    "start": "yarn workspaces foreach run start",
-    "build": "yarn workspaces foreach -p -j unlimited run build",
+    "dev": "",
+    "build": "",
     "lint": "eslint --cache --report-unused-disable-directives .",
     "test": "jest",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
-    "setup": "zx ./scripts/setup.js"
+    "setup": "zx ./scripts/setup.js",
+    "syncpack:fix": "syncpack fix-mismatches  -d -p -P",
+    "syncpack:list": "syncpack list-mismatches"
   },
   "dependencies": {
     "@babel/cli": "^7.17.10",
@@ -33,15 +35,15 @@
     "@babel/plugin-proposal-class-properties": "^7.17.12",
     "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
     "@babel/plugin-transform-runtime": "^7.18.2",
-    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.17.12",
     "@babel/register": "^7.17.7",
     "@emotion/babel-plugin": "^11.9.2",
     "@emotion/eslint-plugin": "^11.7.0",
     "@emotion/react": "^11.9.0",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
+    "@typescript-eslint/eslint-plugin": "5.47.0",
+    "@typescript-eslint/parser": "5.50.0",
     "babel-jest": "^28.1.0",
     "babel-plugin-import": "^1.13.5",
     "babel-plugin-relay": "^13.2.0",
@@ -49,7 +51,7 @@
     "cross-spawn": "^7.0.3",
     "dotenv": "^16.0.1",
     "envars": "^0.4.0",
-    "eslint": "^8.17.0",
+    "eslint": "8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
@@ -59,19 +61,19 @@
     "inquirer": "^8.2.4",
     "jest": "^28.1.0",
     "minimist": "^1.2.6",
-    "prettier": "^2.6.2",
-    "react": "^18.1.0",
-    "typescript": "^4.7.3",
+    "prettier": "2.8.3",
+    "react": "^18.2.0",
     "zx": "^7.1.1"
   },
   "devDependencies": {
+    "typescript": "^4.9.5",
     "@jest/types": "^28.1.0",
     "@types/babel__core": "^7.1.19",
     "@types/cross-spawn": "^6.0.2",
     "@types/inquirer": "^8.2.1",
-    "@types/jest": "^28.1.0",
+    "@types/jest": "29.2.4",
     "@types/minimist": "^1.2.2",
-    "@types/node": "^17.0.39",
+    "@types/node": "^18.11.19",
     "syncpack": "^8.4.11"
   },
   "envars": {
