--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -1,45 +1,45 @@
 {
-    "name": "desktop-app",
-    "productName": "desktop-app",
-    "version": "1.0.0",
-    "private": true,
-    "description": "My Electron application description",
-    "main": ".webpack/main",
-    "scripts": {
-        "dev": "electron-forge start",
-        "package": "electron-forge package",
-        "make": "electron-forge make",
-        "publish": "electron-forge publish",
-        "lint": "eslint --ext .ts,.tsx ."
-    },
-    "keywords": [],
-    "author": {
-        "name": "neo",
-        "email": "shaokexu@example.com"
-    },
-    "license": "MIT",
-    "devDependencies": {
-        "@electron-forge/cli": "^6.0.4",
-        "@electron-forge/maker-deb": "^6.0.4",
-        "@electron-forge/maker-rpm": "^6.0.4",
-        "@electron-forge/maker-squirrel": "^6.0.4",
-        "@electron-forge/maker-zip": "^6.0.4",
-        "@electron-forge/plugin-webpack": "^6.0.4",
-        "@typescript-eslint/eslint-plugin": "^5.0.0",
-        "@typescript-eslint/parser": "^5.0.0",
-        "@vercel/webpack-asset-relocator-loader": "1.7.3",
-        "css-loader": "^6.0.0",
-        "electron": "22.2.0",
-        "eslint": "^8.0.1",
-        "eslint-plugin-import": "^2.25.0",
-        "fork-ts-checker-webpack-plugin": "^7.2.13",
-        "node-loader": "^2.0.0",
-        "style-loader": "^3.0.0",
-        "ts-loader": "^9.2.2",
-        "ts-node": "^10.0.0",
-        "typescript": "~4.5.4"
-    },
-    "dependencies": {
-        "electron-squirrel-startup": "^1.0.0"
-    }
+  "name": "desktop-app",
+  "productName": "desktop-app",
+  "version": "1.0.0",
+  "private": true,
+  "description": "My Electron application description",
+  "main": ".webpack/main",
+  "scripts": {
+    "dev": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "eslint --ext .ts,.tsx ."
+  },
+  "keywords": [],
+  "author": {
+    "name": "neo",
+    "email": "shaokexu@example.com"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "@electron-forge/cli": "^6.0.4",
+    "@electron-forge/maker-deb": "^6.0.4",
+    "@electron-forge/maker-rpm": "^6.0.4",
+    "@electron-forge/maker-squirrel": "^6.0.4",
+    "@electron-forge/maker-zip": "^6.0.4",
+    "@electron-forge/plugin-webpack": "^6.0.4",
+    "@typescript-eslint/eslint-plugin": "5.47.0",
+    "@typescript-eslint/parser": "5.50.0",
+    "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "css-loader": "^6.0.0",
+    "electron": "22.2.0",
+    "eslint": "8.30.0",
+    "eslint-plugin-import": "2.26.0",
+    "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "node-loader": "^2.0.0",
+    "style-loader": "^3.0.0",
+    "ts-loader": "^9.2.2",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.0"
+  }
 }
