--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -16,12 +16,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^18.11.19",
-    "prisma": "^4.9.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.5"
-  },
   "dependencies": {
     "@pothos/core": "^3.24.1",
     "@pothos/plugin-prisma": "^3.40.2",
@@ -29,6 +23,13 @@
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.1",
     "graphql-yoga": "^3.5.1",
-    "envalid": "^7.3.1"
+    "envalid": "^7.3.1",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.19",
+    "prisma": "^4.9.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.5"
   }
 }
