--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -40,6 +40,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "get-port": "^6.1.2"
   }
 }
