add build web app

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,5 +75,8 @@
     "plasmo",
     "webextension",
     "plasmohq"
-  ]
+  ],
+  "[shellscript]": {
+    "editor.defaultFormatter": "foxundermoon.shell-format"
+  }
 }
