--- a/package.json
+++ b/package.json
@@ -8,17 +8,25 @@
   "license": "GPL-3.0",
   "private": true,
   "type": "module",
-  "workspaces": [
-    "scripts",
-    "projects/*"
-  ],
+  "workspaces": {
+    "packages": [
+      "scripts",
+      "projects/*"
+    ],
+    "nohoist": [
+      "**/desktop-app",
+      "desktop-app/**",
+      "**/desktop-app/**"
+    ]
+  },
   "engines": {
     "node": "=16.17.1",
     "yarn": ">= 1.0.0"
   },
   "scripts": {
     "dev": "",
-    "build": "",
+    "build:desktop-app": "zx ./scripts/build-desktop-app.mjs",
+    "build:web-app": "bash ./scripts/build-web-app.sh",
     "lint": "eslint --cache --report-unused-disable-directives .",
     "test": "jest",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
@@ -49,7 +57,6 @@
     "babel-plugin-relay": "^13.2.0",
     "chalk": "^5.0.1",
     "cross-spawn": "^7.0.3",
-    "dotenv": "^16.0.1",
     "envars": "^0.4.0",
     "eslint": "8.30.0",
     "eslint-config-prettier": "^8.5.0",
@@ -75,8 +82,5 @@
     "@types/minimist": "^1.2.2",
     "@types/node": "^18.11.19",
     "syncpack": "^8.4.11"
-  },
-  "envars": {
-    "cwd": "./env"
   }
 }
