--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,5 +78,8 @@
   ],
   "[shellscript]": {
     "editor.defaultFormatter": "foxundermoon.shell-format"
+  },
+  "[prisma]": {
+    "editor.defaultFormatter": "Prisma.prisma"
   }
 }
