modify api to support programmatically start/stop

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,7 +74,8 @@
     "yarnrc",
     "plasmo",
     "webextension",
-    "plasmohq"
+    "plasmohq",
+    "datasources"
   ],
   "[shellscript]": {
     "editor.defaultFormatter": "foxundermoon.shell-format"
