--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -27,11 +27,17 @@
     "graphql-scalars": "^1.20.1",
     "graphql-yoga": "^3.5.1",
     "envalid": "^7.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "winston": "3.8.2",
+    "fs-extra": "11.1.0",
+    "lodash": "4.17.21",
+    "server-destroy": "1.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.19",
     "@types/express": "^4.17.17",
+    "@types/lodash": "4.14.191",
+    "@types/server-destroy": "1.0.1",
     "prisma": "^4.9.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
