--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -2,7 +2,7 @@
   "name": "bi-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "private": true,
   "scripts": {
     "postinstall": "prisma generate",
@@ -41,5 +41,8 @@
     "prisma": "^4.9.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
