--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -9,9 +9,11 @@
     ]
   },
   "description": "My Electron application description",
-  "main": ".webpack/main",
+  "main": "./build/main/main",
   "scripts": {
-    "dev": "electron-forge start",
+    "tsc": "node ./scripts/tsc.js",
+    "copy": "sh ./scripts/copy.sh",
+    "dev": "cross-env WATCH=true && rimraf ./build && npm run tsc && rimraf ./build/web-app && npm run copy && electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -33,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "5.47.0",
     "@typescript-eslint/parser": "5.50.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "copy-webpack-plugin": "11.0.0",
     "css-loader": "^6.0.0",
     "electron": "22.2.0",
     "eslint": "8.30.0",
@@ -42,6 +45,8 @@
     "style-loader": "^3.0.0",
     "ts-loader": "^9.2.2",
     "ts-node": "^10.0.0",
+    "cross-env": "7.0.3",
+    "rimraf": "4.1.2",
     "typescript": "^4.9.5",
     "@types/lodash": "4.14.191",
     "@types/uuid": "9.0.0",
