--- a/projects/desktop-app/tsconfig.json
+++ b/projects/desktop-app/tsconfig.json
@@ -1,19 +1,31 @@
 {
   "compilerOptions": {
-    "target": "ES6",
     "allowJs": true,
-    "module": "commonjs",
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "noImplicitAny": true,
-    "sourceMap": true,
     "baseUrl": ".",
-    "outDir": "dist",
+    "esModuleInterop": true,
+    "module": "commonjs",
     "moduleResolution": "node",
-    "resolveJsonModule": true,
+    "noImplicitAny": true,
+    "outDir": "./build/",
     "paths": {
-      "*": ["node_modules/*"]
-    }
+      "*": [
+        "node_modules/*"
+      ]
+    },
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "target": "ES6"
   },
-  "include": ["src/**/*"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "src/web-app"
+  ],
+  "formatCodeOptions": {
+    "indentSize": 2,
+    "tabSize": 2
+  }
 }
