--- a/projects/desktop-app/tsconfig.json
+++ b/projects/desktop-app/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
-    "outDir": "./build/",
+    "outDir": "./dist/",
     "paths": {
       "*": [
         "node_modules/*"
