api server support setupDB when start server

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,7 +30,7 @@
     "**/.husky": true,
     "**/.pnp.*": false,
     "**/.prettierignore": false,
-    "**/node_modules": true,
+    "**/node_modules": false,
     "**/yarn.lock": false
   },
   "search.exclude": {
