--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -4,6 +4,11 @@
   "description": "",
   "main": "dist/index.js",
   "private": true,
+  "workspaces": {
+    "nohoist": [
+      "**"
+    ]
+  },
   "scripts": {
     "postinstall": "prisma generate",
     "dev": "ts-node-dev src/index.ts",
@@ -31,14 +36,14 @@
     "winston": "3.8.2",
     "fs-extra": "11.1.0",
     "lodash": "4.17.21",
-    "server-destroy": "1.0.1"
+    "server-destroy": "1.0.1",
+    "prisma": "^4.9.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.19",
     "@types/express": "^4.17.17",
     "@types/lodash": "4.14.191",
     "@types/server-destroy": "1.0.1",
-    "prisma": "^4.9.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
