remove api, desktop-app from workspace

--- a/env/.local.env
+++ b/env/.local.env
@@ -7,7 +7,5 @@
 # NOTE: You can override any of these settings by placing them
 #       into ".local.override.env" file (excluded from the repo).
 
-APP_NAME=bookmark-intelligence
-API_PORT=4000
-VERSION=1.0.0
-DATABASE_URL="postgresql://localhost:5432/postgres?schema=public"
+SETUP_DB = true
+SEED_DB = true
