--- a/projects/browser-extension/package.json
+++ b/projects/browser-extension/package.json
@@ -25,6 +25,9 @@
     "typescript": "^4.9.5",
     "@plasmohq/prettier-plugin-sort-imports": "3.6.1"
   },
+  "envars": {
+    "cwd": "../../env"
+  },
   "manifest": {
     "host_permissions": [
       "https://*/*"
