--- a/projects/ui/package.json
+++ b/projects/ui/package.json
@@ -28,5 +28,8 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.5",
     "vite": "^4.1.0"
+  },
+  "envars": {
+    "cwd": "../../env"
   }
 }
