update desktop package logic

--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -4,15 +4,16 @@
   "version": "1.0.0",
   "private": true,
   "description": "Bookmark intelligence desktop app",
-  "main": "./dist/main/main",
+  "main": "./dist/main/main.js",
   "scripts": {
     "tsc": "node ./scripts/tsc.js",
     "webapp": "sh ./scripts/build-copy-web-app.sh",
     "dev": "cross-env WATCH=true && rimraf ./dist && npm run webapp && npm run tsc && electron-forge start",
     "electron:start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
+    "installProdNodeModules": "cp package.json ./dist && cp yarn.lock && cd ./dist && yarn --prod && cd ..",
+    "package": "npm run installProdNodeModules && electron-forge package",
+    "make": "npm run installProdNodeModules && electron-forge make",
+    "publish": "npm run installProdNodeModules && electron-forge publish",
     "lint": "eslint --ext .ts,.tsx ."
   },
   "keywords": [],
