update build script

--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -7,9 +7,10 @@
   "main": "./dist/main/main.js",
   "scripts": {
     "tsc": "node ./scripts/tsc.js",
-    "webapp": "sh ./scripts/build-copy-web-app.sh",
-    "dev": "cross-env WATCH=true && rimraf ./dist && npm run webapp && npm run tsc && electron-forge start",
+    "webapp": "sh ../../scripts/build-web-app-to-desktop-app.sh",
     "electron:start": "electron-forge start",
+    "dev:build": "npm run webapp && npm run dev",
+    "dev": "cross-env WATCH=true && rimraf ./dist && npm run tsc && cp -rf ./src/web-app ./dist/ && npm run electron:start",
     "installProdNodeModules": "cp package.json ./dist && cp yarn.lock ./dist && cd ./dist && yarn --prod && cd ..",
     "copy-make-files": "node ./scripts/generateZip.js",
     "app:package": "npm run webapp && npm run installProdNodeModules && electron-forge package",
@@ -27,7 +28,7 @@
     "@electron-forge/cli": "^6.0.4",
     "@electron-forge/maker-deb": "^6.0.4",
     "@electron-forge/maker-rpm": "^6.0.4",
-    "@electron-forge/maker-squirrel": "^6.0.4",
+    "@electron-forge/maker-squirrel": "^6.0.5",
     "@electron-forge/maker-zip": "^6.0.4",
     "@electron-forge/plugin-webpack": "^6.0.4",
     "@typescript-eslint/eslint-plugin": "5.47.0",
