--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -11,11 +11,12 @@
     "electron:start": "electron-forge start",
     "dev:build": "npm run webapp && npm run dev",
     "dev": "cross-env WATCH=true && rimraf ./dist && npm run tsc && cp -rf ./src/web-app ./dist/ && npm run electron:start",
+    "build": "sh ../../scripts/build-desktop-app.sh",
     "installProdNodeModules": "cp package.json ./dist && cp yarn.lock ./dist && cd ./dist && yarn --prod && cd ..",
     "copy-make-files": "node ./scripts/generateZip.js",
-    "app:package": "npm run webapp && npm run installProdNodeModules && electron-forge package",
-    "app:make": "npm run webapp && npm run installProdNodeModules && electron-forge make && npm run copy-make-files",
-    "app:publish": "npm run webapp && npm run installProdNodeModules && electron-forge publish",
+    "app:package": "npm run build && electron-forge package",
+    "app:make": "npm run build && electron-forge make && npm run copy-make-files",
+    "app:publish": "npm run build && electron-forge publish",
     "lint": "eslint --ext .ts,.tsx ."
   },
   "keywords": [],
