replace sh to bash

--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   },
   "scripts": {
     "dev": "",
-    "build:ui-to-api": "sh ./scripts/build-ui-to-api.sh",
-    "build:web-app-to-desktop-app": "sh ./scripts/build-web-app-to-desktop-app.sh",
-    "build:web-app": "sh ./scripts/build-web-app.sh",
-    "build:desktop-app": "sh ./scripts/build-desktop-app.sh",
-    "release:desktop-app": "sh ./scripts/release-desktop-app.sh",
-    "release:browser-extension": "sh ./scripts/release-browser-extension.sh",
+    "build:ui-to-api": "bash ./scripts/build-ui-to-api.sh",
+    "build:web-app-to-desktop-app": "bash ./scripts/build-web-app-to-desktop-app.sh",
+    "build:web-app": "bash ./scripts/build-web-app.sh",
+    "build:desktop-app": "bash ./scripts/build-desktop-app.sh",
+    "release:desktop-app": "bash ./scripts/release-desktop-app.sh",
+    "release:browser-extension": "bash ./scripts/release-browser-extension.sh",
     "lint": "eslint --cache --report-unused-disable-directives .",
     "test": "jest",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
