--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -12,17 +12,13 @@
     "dev:build": "npm run webapp && npm run dev",
     "dev": "cross-env WATCH=true && rimraf ./dist && npm run tsc && cp -rf ./src/web-app ./dist/ && npm run electron:start",
     "build": "bash ../../scripts/build-desktop-app.sh",
-    "installProdNodeModules": "cp package.json ./dist && cp yarn.lock ./dist && cd ./dist && yarn --prod && cd ..",
-    "copy-make-files": "node ./scripts/generateZip.js",
     "app:package": "npm run build && electron-forge package",
     "app:make": "npm run build && electron-forge make",
-    "app:publish": "npm run build && electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "app:publish": "npm run build && electron-forge publish"
   },
   "keywords": [],
   "author": {
-    "name": "neo",
-    "email": "shaokexu@example.com"
+    "name": "neo"
   },
   "license": "MIT",
   "devDependencies": {
@@ -32,14 +28,10 @@
     "@electron-forge/maker-squirrel": "^6.0.5",
     "@electron-forge/maker-zip": "^6.0.4",
     "@electron-forge/plugin-webpack": "^6.0.4",
-    "@typescript-eslint/eslint-plugin": "5.47.0",
-    "@typescript-eslint/parser": "5.50.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "copy-webpack-plugin": "11.0.0",
     "css-loader": "^6.0.0",
     "electron": "22.2.0",
-    "eslint": "8.30.0",
-    "eslint-plugin-import": "2.26.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "node-loader": "^2.0.0",
     "style-loader": "^3.0.0",
