--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -11,7 +11,7 @@
     "build": "bash ../../scripts/build-web-app.sh",
     "prisma:generate": "prisma generate",
     "seed": "prisma db seed",
-    "migration:dev": "prisma migrate dev",
+    "migration:dev": "dotenv -e ../../.env -c -- prisma migrate dev",
     "migration:deploy": "prisma migrate deploy"
   },
   "prisma": {
@@ -42,7 +42,9 @@
     "@types/server-destroy": "1.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5",
-    "envars": "^0.4.0"
+    "envars": "^0.4.0",
+    "dotenv": "16.0.3",
+    "dotenv-cli": "7.1.0"
   },
   "envars": {
     "cwd": "../../env"
