implement seed function

--- a/env/.env.template
+++ b/env/.env.template
@@ -3,4 +3,5 @@
 APP_NAME=bookmark-intelligence
 API_PORT=4000
 VERSION=1.0.0
+DESKTOP_MODE=4000
 DATABASE_URL=<Your-DB-URL> # "file:/Users/bitsky/bookmark-intelligence/projects/api/.bi-api/bi-api.db"
