add a bacis page of extension settings'

--- a/projects/browser-extension/package.json
+++ b/projects/browser-extension/package.json
@@ -13,8 +13,12 @@
   },
   "dependencies": {
     "plasmo": "0.70.1",
+    "@plasmohq/messaging": "0.3.0",
+    "graphql": "^16.6.0",
+    "@apollo/client": "^3.7.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.0",
     "antd": "^5.4.6"
   },
   "devDependencies": {
