--- a/projects/browser-extension/package.json
+++ b/projects/browser-extension/package.json
@@ -60,7 +60,8 @@
       "unlimitedStorage",
       "webNavigation",
       "notifications",
-      "storage"
+      "storage",
+      "unlimitedStorage"
     ]
   }
 }
