implement basic content extract

--- a/projects/browser-extension/package.json
+++ b/projects/browser-extension/package.json
@@ -62,7 +62,8 @@
       "webNavigation",
       "notifications",
       "storage",
-      "unlimitedStorage"
+      "unlimitedStorage",
+      "scripting"
     ]
   }
 }
