--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -54,8 +54,7 @@
     "lodash": "4.17.21",
     "uuid": "9.0.0",
     "electron-log": "5.0.0-beta.16",
-    "fs-extra": "11.1.0",
-    "@bitsky/shared": "file:../shared"
+    "fs-extra": "11.1.0"
   },
   "envars": {
     "cwd": "../../env"
