--- a/projects/ui/package.json
+++ b/projects/ui/package.json
@@ -21,8 +21,7 @@
     "i18next": "^22.4.15",
     "react-i18next": "^12.2.2",
     "vitest": "^0.31.0",
-    "antd": "^5.4.6",
-    "@bitsky/shared": "file:../shared"
+    "antd": "^5.4.6"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^3.0.0",
