--- a/projects/ui/tsconfig.json
+++ b/projects/ui/tsconfig.json
@@ -20,7 +20,9 @@
     }
   },
   "include": ["src"],
-  "references": [{
-    "path": "./tsconfig.node.json"
-  }]
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
