fix build desktop app error'

--- a/projects/ui/tsconfig.json
+++ b/projects/ui/tsconfig.json
@@ -16,13 +16,11 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
-      "@bitsky/shared": ["../shared"]
+      "@bitsky/shared": ["../shared/*"]
     }
   },
   "include": ["src"],
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
-    }
-  ]
+  "references": [{
+    "path": "./tsconfig.node.json"
+  }]
 }
